syntax = "proto3";

package bubble.auth;
option go_package = "grpc";

service auth {
    rpc AuthRequest(ClientInfo) returns(AuthRet);
}

message AesReqData {
    int32 clientVersion = 1; //385877289
    int64 uin = 2; //463474118

    bytes autoAuthKey=3; //快速auth

    string deviceId = 4; //"497dc05fa3719032f34fdd7fac2edfeb"
    string deviceType = 5;  // "iOS10.3.2"
    string deviceName = 6; // iPhone
    string imei = 7; //"ad7dc05fa3719032f34fdd7fac2edfeb"
    string timeZone = 8;//"8.00"
    string language = 9; //"zh_CN",
}

message RsaReqData {
    string cliRandomEncryKey = 1;//client rand aes key
    string userToken = 2;
    bytes cliPubEcdhkey = 3; //需要RSA保护,直接暴露，存在中间人攻击
}

message ClientInfo {
    bytes aesData = 1; // AES_Enc(cliRandomEncryKey, AesReqData)
    bytes rsaData = 2; // RSA_Enc(RSA pubKey, RsaReqData)
}

//response
message AuthRet {
    string errMsg = 1;
    int32 ret = 2;
    bytes authSectResp = 3; //AES_Enc(cliRandomEncryKey, AuthSectResp)
}

message AuthSectResp {
    int32 serverTime = 1;

    //客户端得到svrPubEcdhkey后是可以通过ecdh算法算出这个key的, server ecdhAesKey == client ecdhAesKey
    //encSessionKey=AES_Enc(ecdhAesKey, SessionKey)
    //auth通过后，之后的业务数据都使用SessionKey进行AES
    bytes encSessionKey = 4;

    bytes svrPubEcdhkey = 5;

    bytes autoAuthKey=3; //快速auth(类似缓存机制,短生命)
}